2014-12-06  Smacky

	* Improve validation of installation directory.

2014-12-04  Smacky

	* Initial release.