@@ -4,24 +4,23 @@ Version=1.1
 Name=Daimonin
 GenericName=MMORPG
 Comment=Free open source MMORPG
-Icon=%INSTALLDIR%/icon.png
+Icon=%INSTALLDIR%/%INSTALLSUFFIX%/icon.png
 Categories=Game
-TryExec=%INSTALLDIR%/%LAUNCHER%
-Exec=%INSTALLDIR%/%LAUNCHER%
-Path=%INSTALLDIR%
+TryExec=%LAUNCHDIR%/%LAUNCHER%
+exec=%LAUNCHDIR%/%LAUNCHER%
 Actions=PlayMain;PlayDev;Uninstall
 
 [Desktop Action PlayMain]
 Name=Play Daimonin (main client)
-Exec=%INSTALLDIR%/%LAUNCHER% main
-Icon=%INSTALLDIR%/icon-playmain.png
+Exec=%LAUNCHDIR%/%LAUNCHER% main
+Icon=%INSTALLDIR%/%INSTALLSUFFIX%/icon-playmain.png
 
 [Desktop Action PlayDev]
 Name=Play Daimonin (dev client)
-Exec=%INSTALLDIR%/%LAUNCHER% dev
-Icon=%INSTALLDIR%/icon-playdev.png
+Exec=%LAUNCHDIR%/%LAUNCHER% dev
+Icon=%INSTALLDIR%/%INSTALLSUFFIX%/icon-playdev.png
 
 [Desktop Action Uninstall]
 Name=Uninstall Daimonin
-Exec=%INSTALLDIR%/%LAUNCHER% uninstall
-Icon=%INSTALLDIR%/icon-uninstall.png
+Exec=%LAUNCHDIR%/%LAUNCHER% uninstall
+Icon=%INSTALLDIR%/%INSTALLSUFFIX%/icon-uninstall.png
